# grain.detector

./: .dockerignore  .gitignore  CHANGELOG.md  CITING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  grain_counter.py  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.bat  style.css  train_custom_yolo.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
src/: engine.py  py.typed  utils.py
tests/: test_app.py  test_engine.py
